--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
   "dependencies": {
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "4.3.3",
+    "bootstrap": "^4.5.2",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "3.2.0",
+    "install": "^0.13.0",
     "json-server": "^0.14.2",
+    "npm": "^6.14.8",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.0.0",
     "typescript": "^4.0.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.44.2",
@@ -40,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.0",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "node-sass-chokidar": "^1.5.0",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.4",
