--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.0.0",
     "typescript": "^4.0.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "uuid": "^8.3.0",
     "webpack": "^4.44.2",
     "webpack-merge": "^5.1.4"
   },
