--- a/package.json
+++ b/package.json
@@ -7,24 +7,34 @@
   "author": "FreightHub Recruiting Team",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
-    "server": "json-server db.json",
-    "start:dev": "webpack-dev-server --env.mode development --open --hot"
+    "client:dev": "env-cmd webpack-dev-server --env.mode development --open --hot",
+    "build:prod": "rm -rf public/build && env-cmd webpack --env.mode production",
+    "start": "json-server db.json",
+    "start:watch": "json-server --watch db.json",
+    "start:dev": "npm-run-all -p start:watch client:dev",
+    "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "4.3.3",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "clean-webpack-plugin": "^3.0.0",
+    "env-cmd": "^10.1.0",
     "html-webpack-plugin": "3.2.0",
     "install": "^0.13.0",
     "json-server": "^0.14.2",
+    "mobx": "^5.15.7",
+    "mobx-react": "^6.3.0",
     "npm": "^6.14.8",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.0.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "uuid": "^8.3.0",
@@ -48,6 +58,7 @@
     "eslint-plugin-react": "^7.21.0",
     "eslint-plugin-react-hooks": "^4.1.2",
     "node-sass-chokidar": "^1.5.0",
+    "npm-run-all": "^4.1.5",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.4",
