--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,15 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "noImplicitAny": false,
-    "module": "es6",
-    "target": "es5",
+    "module": "commonJs",
+    "target": "es6",
+    "lib": [
+      "es2015",
+      "es2017",
+      "dom"
+    ],
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
+    "experimentalDecorators": true
   }
 }
